--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Feiyan Hu"
+  name             : "Feiyan Hu, PhD"
   avatar           : "profile.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Dublin, Ireland"
-  employer         :
+  employer         : "Insight Centre for Data Analytics, Dublin City University"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=LVnJnmsAAAAJ&hl=en&authuser=1"
   email            :
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "feiyanhu"
   google_plus      :
   keybase          :
   instagram        :
